[tool.poetry]
name = "plugin-repo"
version = "0.1.0"
description = ""
authors = ["royreznik <reznik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
lxml = "^4.6.3"
aiofiles = "^0.7.0"
python-multipart = "^0.0.5"
docker-compose = "^1.29.2"

[tool.poetry.dev-dependencies]
ipython = "^7.27.0"
ipdb = "^0.13.9"
black = "^21.9b0"
flake8-black = "^0.2.3"
flake8 = "^3.9.2"
isort = "^5.9.3"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
